# SmartWaterServer-hackathon

./: .gitmodules  README.md
src/: CMakeLists.txt  add_measurement_main.cpp  add_sensor_main.cpp  database.cpp  database.h  generate_data_main.cpp  main.cpp  qgram.h  sensor.h  server.cpp  server.h  util.h
